preserved trailing space that hang should not contribute to intrinsic size
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
People
(Reporter: jfernandez, Assigned: jfkthame)
References
Details
Attachments
(4 files)
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0
Steps to reproduce:
1- Load the attached test case
Actual results:
The line is broken incorrectly and the white spaces contribute to the min-content size (actual.png)
Expected results:
All the characters are placed in different lines and there is no trialing space contributing to the min-content size (expected.png)
| Reporter | ||
Comment 1•5 years ago
|
||
| Reporter | ||
Comment 2•5 years ago
|
||
| Reporter | ||
Comment 3•5 years ago
|
||
This is probably the root cause of the bug #1634314 and #1665027 which describe several Web Platform Tests failures.
There is also a similar bug in chrome:
https://bugs.chromium.org/p/chromium/issues/detail?id=972992
Comment 4•5 years ago
|
||
Hello I have tried to reproduce the issue with the description provided on Ubuntu 18.04 with firefox Nightly 82.0a1(2020-09-16).
Could you please answer the following questions in order to investigate it further?
- Does this issue happen with a new profile? Here is a link on how to create a new profile: https://support.mozilla.org/en-US/kb/profile-manager-create-remove-switch-firefox-profiles
- Are you using add-ons? If so could you please list them?
- Does this issue occur in the latest nightly version of firefox? Here is a link from where you can download it: https://www.mozilla.org/en-US/firefox/channel/desktop/
| Reporter | ||
Comment 5•5 years ago
|
||
(In reply to Negritas Sergiu from comment #4)
Hello I have tried to reproduce the issue with the description provided on Ubuntu 18.04 with firefox Nightly 82.0a1(2020-09-16).
I've used 82.0a1 (2020-09-20) (64-bit) in Ubuntu 20.04.1 LTS
Could you please answer the following questions in order to investigate it further?
- Does this issue happen with a new profile? Here is a link on how to create a new profile: https://support.mozilla.org/en-US/kb/profile-manager-create-remove-switch-firefox-profiles
Yes, using a new profile leads to the same actual result described in comment #1
- Are you using add-ons? If so could you please list them?
No, I tried on a clean firefox-nightly browser.
- Does this issue occur in the latest nightly version of firefox? Here is a link from where you can download it: https://www.mozilla.org/en-US/firefox/channel/desktop/
I verified that the issue occurs with a Firefox built from source's trunk.
Comment 6•5 years ago
|
||
Hello!
Thank you for the reply. Unfortunatelly I'm still not able to reproduce the issue with Ubuntu 20 and with Fx 82.0a1(2020-09-16).
Will assign this issue to a component so one of our developers could look more into it. If it's not the right component please feel free to change it to an appropriate one.
| Assignee | ||
Comment 7•5 years ago
|
||
(In reply to Negritas Sergiu from comment #6)
Hello!
Thank you for the reply. Unfortunatelly I'm still not able to reproduce the issue with Ubuntu 20 and with Fx 82.0a1(2020-09-16).
The testcase assumes the Ahem font is installed; without that, it will show green X's instead of square boxes. It still demonstrates the incorrect min-content width, though, and fails to put each X on its own individual line.
| Assignee | ||
Comment 8•5 years ago
|
||
This affects a few of the examples in the text/white-space-2 reftest, but the changes look sensible;
more significantly from an interop point of view, there are specific web-platform reftests that are
currently failing, but will pass after the patch.
Depends on D95810
Updated•5 years ago
|
Comment 10•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Description
•