Bug 1665657 - Whitespace that will hang should not contribute to the min inline-size of a textframe. r=emilio

This affects a few of the examples in the text/white-space-2 reftest, but the changes look sensible;
more significantly from an interop point of view, there are specific web-platform reftests that are
currently failing, but will pass after the patch.

Differential Revision: https://phabricator.services.mozilla.com/D95811